deploy/eks_manifest/app/deployment.yml
# deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: iris-web
  name: iris-app-deployment
  labels:
    site: iris
    app: iris-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iris-app
  template:
    metadata:
      labels:
        app: iris-app
    spec:
      containers:
      - name: iris-app
        image: 590183765660.dkr.ecr.us-east-1.amazonaws.com/iris-web/iris-webapp:latest
        ports:
        - containerPort: 8000
        command: ['nohup', './iris-entrypoint.sh', 'iriswebapp'] 
        volumeMounts:
        - name: iris-app-pcv
          mountPath: /home/iris/downloads
          subPath: downloads
        - name: iris-app-pcv
          mountPath: /home/iris/user_templates
          subPath: user_templates
        - name: iris-app-pcv
          mountPath: /home/iris/server_data
          subPath: server_data
        - name: picture-globals
          mountPath: /opt/venv/lib/python3.12/site-packages/docx_generator/globals/picture_globals.py
          subPath: picture_globals.py
      volumes:
      - name: iris-app-pcv
        persistentVolumeClaim:
          claimName: iris-app-claim
      - name: picture-globals
        configMap:
          name: picture-globals-cm
